// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApartmentNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="apartment_number"
      >
        Numer mieszkania
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="Numer mieszkania"
          name="apartment_number"
          placeholder="Numer mieszkania"
          value="12345678900"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podany numer mieszkania jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<ApartmentNumberField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos RGiG"
  id="testId"
  label="Numer mieszkania"
  name="apartment_number"
  placeholder="Numer mieszkania"
  value=""
/>
`;

exports[`<ApartmentNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="apartment_number"
      >
        ApartmentNumber*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="ApartmentNumber"
          name="apartment_number"
          placeholder="Numer mieszkania*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<ApartmentNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="apartment_number"
      >
        ApartmentNumber
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos RGiG"
          id="testId"
          label="ApartmentNumber"
          name="apartment_number"
          placeholder="Numer mieszkania"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
